--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 
                 <ul id="menu">
         <li><a href="index.html">Welcome</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="quiz.html">Quiz</a></li>
-          <li><a href="market.html">Market</a></li>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/quiz.html">Quiz</a></li>
+          <li><a href="pages/market.html">Market</a></li>
         </ul>
       </div>
 
  <ul class="menu-click">
         <a href="#home"><li href="#home">Welcome</li></a>
-        <a href="#about-us"><li href="#about-us">About</li></a>
-        <a href="#portfolio"><li href="#portfolio">Quiz</li></a>
-        <a href="#contact"><li href="#contact">Market</li></a>
+        <a href="pages/about.html"><li href="pages/about.html">About</li></a>
+        <a href="pages/quiz.html"><li href="pages/quiz.html">Quiz</li></a>
+        <a href="pages/market.html"><li href="pages/market.html">Market</li></a>
         
     </ul>
 
