--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
                 <ul id="menu">
         <li><a href="index.html">Welcome</a></li>
-          <li><a href="pages/about.html">About</a></li>
-          <li><a href="pages/quiz.html">Quiz</a></li>
-          <li><a href="pages/market.html">Market</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
+          <li><a href="market.html">Market</a></li>
         </ul>
       </div>
 
